--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,23 @@
 .container1 {
   display: grid;
-  grid-template-columns: (1, 1fr);
+  grid-template-columns: 1fr 1fr;
   grid-auto-rows: 1fr;
   width: 100vw;
   heigth: 80vh;
+  align: center
 }
 
 .container2 {
   display: grid;
-  grid-template-columns: (2, 1fr);
-  grid-auto-rows: 2fr;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: 1fr 1fr;
   width: 100vw;
   height: 80vh;
 }
 
 .container3 {
   display: grid;
-  grid-template-columns: (3, 1fr);
+  grid-template-columns: 3fr 1fr;
   width: 100vw;
   height: 20vh;
 }
